adding cli options for jvm - enabling serial gc since the app is so small - enable ffm for module